--- a/src/main/resources/assets/touhouorigins/lang/ko_kr.json
+++ b/src/main/resources/assets/touhouorigins/lang/ko_kr.json
@@ -262,29 +262,29 @@
   "touhouorigins.subtitles.entity.fairy.fly": "요정 활공",
   "touhouorigins.subtitles.entity.kappa.camouflage_activate": "은신 활성화",
   "touhouorigins.subtitles.entity.kappa.camouflage_deactivate": "은신 비활성화",
-  "touhouorigins.subtitles.entity.kappa.dry": "Kappa dries",
-  "touhouorigins.subtitles.entity.satori.recollect": "Satori recollects",
-  "touhouorigins.subtitles.entity.satori.close_eye": "Third eye closes",
-  "touhouorigins.subtitles.entity.generic.gust": "Wind rushes",
-  "touhouorigins.subtitles.entity.wolf_tengu.growl": "Wolf Tengu growls",
-  "touhouorigins.subtitles.entity.celestial.evolve": "Celestial evolves",
-  "touhouorigins.subtitles.entity.celestial.divinity_restore": "Divinity restores",
-  "touhouorigins.subtitles.entity.celestial.divinity_deplete": "Divinity depletes",
-  "touhouorigins.subtitles.entity.vengeful_spirit.heal": "Vengeful Spirit regenerates",
-  "touhouorigins.subtitles.entity.rabbit.hop": "Rabbit hops",
-  "touhouorigins.subtitles.entity.moon_rabbit.activate": "Moon Rabbit prepares to fire",
-  "touhouorigins.subtitles.entity.hell_raven.decay": "Decay fills",
-  "touhouorigins.subtitles.entity.hell_raven.alert": "Alarm blares",
-  "touhouorigins.subtitles.entity.hell_raven.shoot": "Hell Raven shoots",
-  "touhouorigins.subtitles.entity.kurayami.flight": "Kurayami whooshes",
-  "touhouorigins.subtitles.entity.kurayami.darkness": "Darkness gathers",
-  "touhouorigins.subtitles.entity.kurayami.chomp": "Kurayami chomps",
-  "touhouorigins.subtitles.entity.fukuro.gap_upgrade": "Pouch tears",
-  "touhouorigins.subtitles.entity.fukuro.bag_open": "Pouch opens",
-  "touhouorigins.subtitles.entity.exfukuro.bag_open": "Gap opens",
-  "touhouorigins.subtitles.entity.karakasa.escape": "Karakasa whooshes",
-  "touhouorigins.subtitles.entity.menreiki.swap": "Swaps mask",
-  "touhouorigins.subtitles.entity.menreiki.thorns": "Damage reflects",
+  "touhouorigins.subtitles.entity.kappa.dry": "캇파의 수분",
+  "touhouorigins.subtitles.entity.satori.recollect": "사토리의 회상",
+  "touhouorigins.subtitles.entity.satori.close_eye": "닫힌 3번째 눈",
+  "touhouorigins.subtitles.entity.generic.gust": "바람 달리기",
+  "touhouorigins.subtitles.entity.wolf_tengu.growl": "백랑텐구의 울부짖음",
+  "touhouorigins.subtitles.entity.celestial.evolve": "천인 진화",
+  "touhouorigins.subtitles.entity.celestial.divinity_restore": "신성 회복",
+  "touhouorigins.subtitles.entity.celestial.divinity_deplete": "신성 고갈",
+  "touhouorigins.subtitles.entity.vengeful_spirit.heal": "원령 영혼 회복",
+  "touhouorigins.subtitles.entity.rabbit.hop": "토끼 점프",
+  "touhouorigins.subtitles.entity.moon_rabbit.activate": "달토끼의 발사 준비",
+  "touhouorigins.subtitles.entity.hell_raven.decay": "부식 메우기",
+  "touhouorigins.subtitles.entity.hell_raven.alert": "경보음",
+  "touhouorigins.subtitles.entity.hell_raven.shoot": "지옥까마귀 발사",
+  "touhouorigins.subtitles.entity.kurayami.flight": "어둠 요괴 이동",
+  "touhouorigins.subtitles.entity.kurayami.darkness": "어둠 결집",
+  "touhouorigins.subtitles.entity.kurayami.chomp": "어둠 요괴의 섭취",
+  "touhouorigins.subtitles.entity.fukuro.gap_upgrade": "가방의 티어",
+  "touhouorigins.subtitles.entity.fukuro.bag_open": "가방 개방",
+  "touhouorigins.subtitles.entity.exfukuro.bag_open": "가방 개방",
+  "touhouorigins.subtitles.entity.karakasa.escape": "카라카사 움직임",
+  "touhouorigins.subtitles.entity.menreiki.swap": "가면 교체",
+  "touhouorigins.subtitles.entity.menreiki.thorns": "피해 반사",
 
   "death.attack.sun": "%1$s이(가) 증발했습니다",
   "death.attack.sun.player": "%1$s이(가) %2$s과(와) 싸우다가 증발했습니다",
