update chinese from laptop,translate by dream-matrix

--- a/src/main/resources/assets/touhouorigins/lang/zh_cn.json
+++ b/src/main/resources/assets/touhouorigins/lang/zh_cn.json
@@ -299,12 +299,12 @@
   "death.attack.sun.player": "%1$s 在与 %2$s 的战斗中被蒸发了",
   "death.attack.probe": "%1$s 被 %2$s 探测到了",
   "death.attack.probe.item": "%1$s被 %2$s 用 %3$s 探测到了",
-  "death.attack.fireThorns": "%1$s burned their hand fighting %2$s",
-  "death.attack.fireThorns.item": "%1$s burned their hand on %3$s fighting %2$s",
-  "death.attack.parry": "%1$s was parried to death by %2$s",
-  "death.attack.parry.item": "%1$s was killed by a riposte from %2$s using %3$s",
-  "death.attack.masterDeath": "%1$s failed to protect their master",
-  "death.attack.masterDeath.player": "%1$s failed to protect their master from %2$s",
+  "death.attack.fireThorns": "%1$s 在与 %2$s 战斗时伤到了手",
+  "death.attack.fireThorns.item": "%1$s %2$s 战斗时被 %3$s 伤到了手",
+  "death.attack.parry": "%1$s被 %2$s 的格挡杀死了",
+  "death.attack.parry.item": "%1$s 被 %2$s 使用 %3$s 的盾反杀死了",
+  "death.attack.masterDeath": "%1$s 没能保护她的主人",
+  "death.attack.masterDeath.player": "%1$s 没能从 %2$s 手中保护她的主人",
 
   "category.touhouorigins": "Touhou Origins",
   "key.touhouorigins.primary_extra": "Primary Extra",
